--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -64,7 +64,8 @@ $primary-color              : #7a8288;
 $success-color              : #62c462;
 $warning-color              : #f89406;
 $danger-color               : #ee5f5b;
-$info-color                 : #1eabe6;
+$info-color                 : #484848;
+$url-color                  : #1eabe6;
 
 /* brands */
 $behance-color              : #1769FF;
