--- a/assets/css/customstyle.css
+++ b/assets/css/customstyle.css
@@ -164,7 +164,7 @@
   }
   
   .publications-list a {
-    color: #484848;
+    color: #3498db;
     font-weight: normal; /* Regular weight for subtle look */
     text-decoration: none;
   }
