--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -43,7 +43,9 @@ layout: default
         {% endif %}
         
              
-        {% if page.citation %}
+        {% if page.citation and page.paperurl %}
+          <p>Recommended citation: {{ page.citation }} <a href="{{ page.paperurl }}"><u>{{ page.paperurl }}</u></a></p>
+        {% elsif page.citation %}
           <p>Recommended citation: {{ page.citation }} </p>
         {% endif %}
     
