--- a/assets/css/customstyle.css
+++ b/assets/css/customstyle.css
@@ -49,7 +49,7 @@
     border: 2px solid;
     border-radius: 8px;
     padding: 15px;
-    margin-bottom: 15px;
+    /*margin-bottom: 15px;*/
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
     transition: transform 0.2s ease-in-out;
   }
