--- a/_sass/_sidebar.scss
+++ b/_sass/_sidebar.scss
@@ -118,10 +118,11 @@
 }
 .sidebar .author__name {
   font-family: $sans-serif;
-  font-size: $type-size-5;
+  font-size: $type-size-4;
 }
 
 .author__bio {
+  font-weight: normal;
   margin: 0;
 
   @include breakpoint($large) {
@@ -159,6 +160,7 @@
 }
 
 .author__urls {
+  font-weight: 300;
   display: none;
   position: absolute;
   right: 0;
