--- a/_includes/news_entry.html
+++ b/_includes/news_entry.html
@@ -6,6 +6,9 @@
     {% if include.website %}
     <a href="{{ include.website }}" class="news-link" target="_blank">Learn More</a>
     {% endif %}
+    {% if include.website2 %}
+    <a href="{{ include.website2 }}" class="news-link" target="_blank">Learn More</a>
+    {% endif %}
     {% if include.linkedin %}
     <a href="{{ include.linkedin }}" class="news-link linkedin" target="_blank">View LinkedIn Post</a>
     {% endif %}
